[project]
name = "icml2026-landscape"
version = "0.1.0"
description = "An evidence-aware learning roadmap for understanding the ICML 2026 research landscape."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "MIT"
authors = [{ name = "Juyoung ML" }]
dependencies = [
  "matplotlib>=3.10,<4",
  "networkx>=3.5,<4",
  "numpy>=2.2,<3",
  "pypdf>=5.9,<7",
  "requests>=2.32,<3",
  "scikit-learn>=1.7,<2",
]

[project.optional-dependencies]
semantic = [
  "torch>=2.7,<3",
  "transformers>=4.53,<6",
]

[dependency-groups]
dev = ["ruff>=0.12,<1"]

[tool.uv]
required-version = ">=0.11.7"
package = false

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["data", "figures", "reports"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]

